<resources>
    <string name="app_name">Covid 19 India</string>
    <string name="data_records">Yesterday Record</string>
    <string name="akhilesh_garg">Akhilesh Garg</string>
    <string name="slogan">Stay safe, stay healthy</string>
    <string name="changes_in_death_cases">Changes in death cases: </string>
    <string name="changes_in_recovery_cases">Changes in recovered cases: </string>
    <string name="show_state_record">Show State wise data</string>
    <string name="about">About App</string>
    <string name="dialogContent">\nCovid-19 India Tracker\nDeveloped by Akhilesh Garg\n\nAPI Used: <a href='https://apify.com/covid-19'>Apify COVID-19- API</a>\n\n© Akhilesh Garg")</string>
    <string name="about_app_title"><u>About app</u></string>
    <string name="last_updated">Last Updated:</string>
</resources>